# Tutor-RAG

./: .clinerules  .env  .env.example  .gitignore  .gitmodules  README.md  TutorRAG_current_state_and_completion_plan.md  pyproject.toml  test.db
app/: main.py
app/api/: routes_chat.py  routes_documents.py  routes_health.py  routes_search.py  routes_upload.py
app/core/: config.py  llm_client.py
app/db/: base.py  models.py
app/ingestion/: chunker.py  normalizer.py  parser_pptx.py
app/prompts/: verification_prompts.py
app/reasoning/: citation_builder.py  planner.py  query_classifier.py  query_decomposer.py  synthesizer.py
app/retrieval/: base_store.py  bm25_index.py  cross_encoder_reranker.py  dense_retriever.py  embedder.py  hybrid_retriever.py  in_memory_store.py  qdrant_store.py  reranker.py  sparse_encoder.py  sparse_retriever.py  store_factory.py
app/schemas/: __init__.py  answer.py  evidence.py  feedback.py  query.py
app/services/: document_service.py  ingestion_service.py  retrieval_service.py  tutoring_service.py
app/storage/: local_storage.py
app/verification/: answer_verifier.py  claim_checker.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  (+7 more)
backend/docs/: data_contracts.md  problem_statement.md  use_cases.md
backend/migrations/: env.py
backend/plan/: rag.aux  rag.tex
backend/tests/: test_reasoning_pipeline.py  test_retrieval.py
docs/: phase_4_review_report.md  requirements.md
plan/: rag.fdb_latexmk  rag.fls  rag.out  rag.toc  rag.xdv
tests/: test_ingestion.py
(+60 files in other folders)
